# 
#  $Id: //WIFI_SOC/release/SDK_4_1_0_0/source/user/ppp-2.4.2/pppd/plugins/radius/radiusclient/include/Makefile.am#1 $
# 
#  Copyright (C) 1997 Lars Fenneberg
# 
#  See the file COPYRIGHT for the respective terms and conditions. 
#  If the file is missing contact me at lf@elemental.net 
#  and I'll send you a copy.
# 
#

AUTOMAKE_OPTIONS = foreign

noinst_HEADERS = pathnames.h messages.h includes.h
include_HEADERS = radiusclient.h
